# JSC_makespan_minimization_bachelor_thesis

./: .gitignore  JSC_final.py  README.md  analyse_genetic_parameter_tests.py  analyze_genetic_results.py  analyze_instances.bash  generate_lower_bounds_tables.py  genetic_algorithm_runner.py  genetic_analysis.txt  instance_analysis.txt  lower_bounds_tables.txt  pyproject.toml  run_genetic_results_full.sh
environment/: pyvenv.cfg
evaluation/: analyze_instances.py  compute_lower_bounds.bash  compute_lower_bounds.py  genetic_algorithm.py  instance_analysis.txt
evaluation/Tai01_problem_0.2_1/: lower_bounds.csv
evaluation/Tai01_problem_0.2_2/: lower_bounds.csv
evaluation/Tai01_problem_0.2_3/: lower_bounds.csv  lower_bounds.txt
evaluation/Tai01_problem_0.5_1/: lower_bounds.csv  lower_bounds.txt
evaluation/Tai01_problem_0.5_2/: lower_bounds.csv
evaluation/Tai01_problem_0.5_3/: lower_bounds.csv
evaluation/Tai01_problem_0.8_1/: lower_bounds.csv  lower_bounds.txt
instance-files/: all.txt  commands1.txt  commands2.txt  commands3.txt  commands4.txt  data_preparation.bash  split_data.py
results/: csv-conversion-script copie.py  csv-conversion-script.py  nohup.out  run_concurrently140-1.bash  run_concurrently140-2.bash  run_concurrently140.bash  run_concurrently141-1.bash  run_concurrently141-2.bash  run_concurrently141.bash
test-files/: 100_20-1.txt  200_08_adjmat.csv  3_3-test.txt  7_7-test.txt  generate_conflict_graph_adj_mat.py  tai200_40.txt
utils/: genetic_schedule_verification.py  plot_elapsed_time_ga.py  read_result_values.py
(+11136 files in other folders)
