[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bython>=0.8",
    "doe>=0.1.3",
    "gurobipy>=11.0.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.2",
    "pandas>=2.3.1",
    "psutil>=6.1.0",
    "pydoe3>=1.3.0",
    "pytest>=8.4.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "setuptools>=30.1.0",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.0",
]
